Remove JVM args deprecated in Java 8